fixed frame and about page on mobile landscape

--- a/components/Frame/Frame.module.scss
+++ b/components/Frame/Frame.module.scss
@@ -77,11 +77,24 @@
       }
     }
 
+    @media screen and (max-height: 600px) {
+      &__booking {
+        display: none;
+      }
+    }
+
     &__available {
       position: relative;
       writing-mode: vertical-lr;
       transform: rotateZ(180deg) translate(0, 0);
       pointer-events: auto;
+      white-space: nowrap;
+    }
+
+    @media screen and (max-height: 400px) {
+      &__available {
+        display: none;
+      }
     }
 
     &__lastUpdate {
@@ -204,6 +217,12 @@
         &:last-of-type {
           padding-bottom: 1rem;
           padding-right: 1.2rem;
+        }
+      }
+
+      @media screen and (max-height: 400px) {
+        &__social {
+          display: none;
         }
       }
     }
